syntax = "proto3";
option go_package = "protocol";

message loginReq{
    string name = 1;
    string inet = 2; // 内网地址
    string net  = 3; // 公网地址
}
message loginResp{
    string code = 1;
}

message cmdExecReq{
    string dir  = 1; // 执行目录
    string name = 2;
    repeated string args = 3;
    int32  timeout = 4;
}
message cmdExecResp{
    string code   = 1;
    string outStr = 2;
}

message processExecReq{
    map<string,string> config = 1;
    string name   = 2;
    repeated string args = 3;
    string dir    = 4;
    string stderr = 5;
}
message processExecResp{
    string code  = 1;
    int32  pid   = 2;
}

message processSignalReq{
    int32 pid    = 1;
    int32 signal = 2;
}
message processSignalResp{
    string code = 1;
}

message processIsAliveReq{
    map<int32, int32> pid = 1;
}
message processIsAliveResp{
    map<int32,bool>   alive = 1;
}

message logFileReq{
    string filename = 1;
    int32  payload  = 2;
}
message logFileResp{
    bytes  context = 1;
}

